--- a/src/style.css
+++ b/src/style.css
@@ -24,3 +24,15 @@ canvas {
 .form-label, .d-inline value-input {
   font-size: 16px;
 }
+
+.modal-content, .show {
+  background-color: transparent;
+}
+
+.modal-dialog, .modal-content, .modal-header, .modal-title, .modal-body, .modal-body > h3, .modal-body > p {
+  background-color: white;
+}
+
+.modal-content {
+  box-shadow: 4px 7px black;
+}
